# RoboCup2026-GoalDetection

./: .gitattributes  .gitignore  README.md  analyze_custom.py  analyze_onnx.py  check_last_nodes.py  check_onnx.py  find_nodes.py  fix_custom_onnx.py  fix_onnx_for_trt82.py  fix_onnx_simple.py  fix_onnx_v2.py  fix_onnx_v3.py  main.py
cpp/: BUILD.md  CMakeLists.txt  gc_listener.py
cpp/src/: camera.cpp  camera.hpp  cuda_utils.hpp  geometry.cpp  geometry.hpp  goal_sender.cpp  goal_sender.hpp  main.cpp  network.cpp  network.hpp  trt_infer.cpp  trt_infer.hpp  yolo.cpp  yolo.hpp
gamecontroller/frontend/src/components/: GoalReviewOverlay.jsx  Main.jsx
gamecontroller/game_controller_app/src/: handlers.rs
gamecontroller/game_controller_core/src/: log.rs
gamecontroller/game_controller_net/src/: action_command_receiver.rs  goal_footage_receiver.rs  lib.rs
gamecontroller/game_controller_runtime/src/: lib.rs
src/: debug_bbox.py  diagnose.py  dump_raw_bbox.py  ui_components.py
src/core/: camera.py  config.py  geometry.py  inference.py  model_tools.py  network.py  trt_inference.py
